2007-10-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Revert associating *.htm and *.html to 
	mozilla bookmarks as the mime systems don't look at magic yet to
	choose the right mime type (Helps: #11843)
	* tests/: add another feed for testing

2007-09-26  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Also add *.jpf as a glob for image/jpx

2007-09-26  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add image/jpx and associated
	glob as per http://www.iana.org/assignments/media-types/image/jpx

2007-09-25  Bastien Nocera  <hadess@hadess.net>

	* HACKING: add a mention of how translations should be
	handled

2007-09-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: added j2k as a possible jpeg2000
	suffix

2007-09-18  Bastien Nocera  <hadess@hadess.net>

	* HACKING: add new hacking file, to give instructions to
	potential contributors

2007-09-18  Alexander Larsson  <alexl@redhat.com>

	* freedesktop.org.xml.in:
	Make application/msword subclass of application/x-ole-storage.
	Patch from David Faure

2007-09-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix the subrip mime-type to mention subrip,
	add magic, patch by Osmo Salomaa <otsaloma@cc.hut.fi>
	* tests/*: add a SubRip subtitle test

2007-09-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the Atom mime-type, add magic to the RSS
	mime-type
	* tests/*: add RSS and Atom test cases

2007-09-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove dubious C# magic, and add Vala
	mime-type, patch from Jürg Billeter <j@bitron.ch> (Closes: #12195)
	* tests/*: add C# and Vala test cases

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix JPEG-2000 mime-types and magic to
	follow the RFC (Closes: #11942)
	* tests/list: s,image/jpeg2000,image/jp2

2007-08-31  Bastien Nocera  <hadess@hadess.net>
