@@ -1,0 +1,2 @@
+<?xml version="1.0" encoding="ISO-8859-1"?><!-- OPML generated by UserLand Frontier v9.0 on Fri, 23 Jul 2004 23:41:33 GMT -->
+<opml version="1.1">	<head>		<title>ourFavoriteFeedsData.top100</title>		<dateCreated>Fri, 02 Jan 2004 12:59:58 GMT</dateCreated>		<dateModified>Fri, 23 Jul 2004 23:41:32 GMT</dateModified>		<ownerName>Dave Winer</ownerName>		<ownerEmail>dave@userland.com</ownerEmail>		<expansionState></expansionState>		<vertScrollState>1</vertScrollState>		<windowTop>20</windowTop>		<windowLeft>0</windowLeft>		<windowBottom>120</windowBottom>		<windowRight>147</windowRight>		</head>	<body>		<outline text="Scripting News" count="580" xmlUrl="http://www.scripting.com/rss.xml"/>		<outline text="Wired News" count="546" xmlUrl="http://www.wired.com/news_drop/netcenter/netcenter.rdf"/>		<outline text="Boing Boing Blog" count="519" xmlUrl="http://boingboing.net/rss.xml"/>		<outline text="The Scobleizer Weblog" count="460" xmlUrl="http://radio.weblogs.com/0001011/rss.xml"/>		<outline text="Slashdot" count="347" xmlUrl="http://slashdot.org/slashdot.rss"/>		<outline text="Joel on Software" count="328" xmlUrl="http://www.joelonsoftware.com/rss.xml"/>		<outline text="Jon's Radio" count="325" xmlUrl="http://weblog.infoworld.com/udell/rss.xml"/>		<outline text="Google Weblog" count="321" xmlUrl="http://google.blogspace.com/index.xml"/>		<outline text="Jeffrey Zeldman Presents- The Daily Report" count="312" xmlUrl="http://www.zeldman.com/feed/zeldman.xml"/>		<outline text="kuro5hin.org" count="301" xmlUrl="http://www.kuro5hin.org/backend.rdf"/>		<outline text="Dilbert" count="297" xmlUrl="http://dwlt.net/tapestry/dilbert.rdf"/>		<outline text="Gizmodo" count="284" xmlUrl="http://www.gizmodo.net/index.xml"/>		<outline text="Joi Ito's Web" count="276" xmlUrl="http://joi.ito.com/index.xml"/>		<outline text="The Doc Searls Weblog" count="245" xmlUrl="http://partners.userland.com/people/docSearls.xml"/>		<outline text="A List Apart: for people who make websites" count="231" xmlUrl="http://www.alistapart.com/rss.xml"/>		<outline text="The Shifted Librarian" count="226" xmlUrl="http://www.theshiftedlibrarian.com/rss.xml"/>		<outline text="Six Log" count="222" xmlUrl="http://www.sixapart.com/log/index.rdf"/>		<outline text="Tim Bray" count="220" xmlUrl="http://www.tbray.org/ongoing/ongoing.rss"/>		<outline text="The Register" count="218" xmlUrl="http://www.theregister.co.uk/tonys/slashdot.rdf"/>		<outline text="Luke Hutteman's public virtual MemoryStream" count="218" xmlUrl="http://www.hutteman.com/weblog/rss.xml"/>		<outline text="Aaron Swartz: The Weblog" count="216" xmlUrl="http://www.aaronsw.com/weblog/index.xml"/>		<outline text="MetaFilter" count="214" xmlUrl="http://xml.metafilter.com/rss.xml"/>		<outline text="Microsoft Watch from Mary Jo Foley" count="207" xmlUrl="http://rssnewsapps.ziffdavis.com/msw.xml"/>		<outline text="Dan Gillmor's eJournal" count="204" xmlUrl="http://weblog.siliconvalley.com/column/dangillmor/index.xml"/>		<outline text="Ranchero" count="204" xmlUrl="http://ranchero.com/xml/rss.xml"/>		<outline text="John Gruber" count="200" xmlUrl="http://daringfireball.net/index.xml"/>		<outline text="Lessig Blog" count="199" xmlUrl="http://www.lessig.org/blog/index.rdf"/>		<outline text="John Robb's Weblog" count="198" xmlUrl="http://jrobb.mindplex.org/rss.xml"/>		<outline text="dive into mark" count="196" xmlUrl="http://diveintomark.org/xml/rss.xml"/>		<outline text="Surfin' Safari" count="190" xmlUrl="http://weblogs.mozillazine.org/hyatt/blogger_rss.xml"/>		<outline text="Ray Ozzie" count="183" xmlUrl="http://www.ozzie.net/blog/rss.xml"/>		<outline text="New York Times: Technology" count="175" xmlUrl="http://partners.userland.com/nytRss/technology.xml"/>		<outline text="Don Box" count="172" xmlUrl="http://www.gotdotnet.com/team/dbox/rss.aspx"/>		<outline text="Tomalak's Realm" count="171" xmlUrl="http://static.userland.com/tomalak/links2.xml"/>		<outline text="Anil Dash" count="170" xmlUrl="http://www.dashes.com/anil/index.rdf"/>		<outline text="Clay Shirky's Essays" count="170" xmlUrl="http://shirky.com/writings/rss.cgi"/>		<outline text="Ben Hammersley's Dangerous Precedent" count="168" xmlUrl="http://www.benhammersley.com/index.rdf"/>		<outline text="inessential.com" count="166" xmlUrl="http://inessential.com/xml/rss.xml"/>		<outline text="Bloglines | News" count="163" xmlUrl="http://www.bloglines.com/rss/about/news"/>		<outline text="dive into mark" count="163" xmlUrl="http://diveintomark.org/xml/atom.xml"/>		<outline text="Sam Ruby" count="162" xmlUrl="http://www.intertwingly.net/blog/index.rss"/>		<outline text="InfoWorld: Top News" count="159" xmlUrl="http://www.infoworld.com/rss/news.rdf"/>		<outline text="Simon Willison's Weblog" count="159" xmlUrl="http://simon.incutio.com/syndicate/rss1.0"/>		<outline text="CNET News.com - Front Door" count="158" xmlUrl="http://news.com.com/2547-1_3-0-5.xml"/>		<outline text="Salon.com" count="157" xmlUrl="http://www.salon.com/feed/RDF/salon_use.rdf"/>		<outline text="Russell Beattie Notebook" count="155" xmlUrl="http://www.russellbeattie.com/notebook/rss.jsp"/>		<outline text="macosxhints" count="150" xmlUrl="http://www.macosxhints.com/backend/geeklog.rdf"/>		<outline text="MSDN Just Published" count="149" xmlUrl="http://msdn.microsoft.com/rss.xml"/>		<outline text="Philip Greenspun Weblog" count="147" xmlUrl="http://blogs.law.harvard.edu/philg/xml/rss.xml"/>		<outline text="Lockergnome's Technology News" count="145" xmlUrl="http://www.lockergnome.com/lockergnome.xml"/>		<outline text="New York Times: NYT HomePage" count="141" xmlUrl="http://partners.userland.com/nytRss/nytHomepage.xml"/>		<outline text="Ars Technica" count="140" xmlUrl="http://arstechnica.com/etc/rdf/ars.rdf"/>		<outline text="Jeremy Allaire's Radio" count="139" xmlUrl="http://radio.weblogs.com/0113297/rss.xml"/>		<outline text="MacCentral" count="139" xmlUrl="http://maccentral.macworld.com/mnn.cgi"/>		<outline text="Jeremy Zawodny's blog" count="138" xmlUrl="http://jeremy.zawodny.com/blog/rss2.xml"/>		<outline text="Techdirt" count="134" xmlUrl="http://www.techdirt.com/techdirt_rss.xml"/>		<outline text="Chris Anderson" count="133" xmlUrl="http://www.simplegeek.com/blogxbrowsing.asmx/GetRss?"/>		<outline text="kottke.org" count="133" xmlUrl="http://www.kottke.org/index.rdf"/>		<outline text="Slashdot" count="133" xmlUrl="http://slashdot.org/index.rss"/>		<outline text="kottke.org" count="132" xmlUrl="http://www.kottke.org/index.xml"/>		<outline text="C--PIRILLO.EXE" count="130" xmlUrl="http://chris.pirillo.com/index.rdf"/>		<outline text="Smart Mobs" count="129" xmlUrl="http://www.smartmobs.com/index.rdf"/>		<outline text="megnut" count="128" xmlUrl="http://www.megnut.com/index.xml"/>		<outline text="Apple Hot News" count="128" xmlUrl="http://www.apple.com/main/rss/hotnews/hotnews.rss"/>		<outline text="Technology News from eWEEK and Ziff Davis" count="127" xmlUrl="http://rssnewsapps.ziffdavis.com/tech.xml"/>		<outline text="mezzoblue" count="126" xmlUrl="http://www.mezzoblue.com/rss/index.xml"/>		<outline text="CNET News.com - Front Door" count="126" xmlUrl="http://rss.com.com/2547-1_3-0-5.xml"/>		<outline text="Ross Mayfield's Weblog" count="125" xmlUrl="http://ross.typepad.com/blog/index.rdf"/>		<outline text="Wes Felter" count="123" xmlUrl="http://wmf.editthispage.com/xml/rss.xml"/>		<outline text="Creative Commons" count="123" xmlUrl="http://creativecommons.org/weblog/rss"/>		<outline text="Joho the Blog" count="122" xmlUrl="http://www.hyperorg.com/blogger/index.rdf"/>		<outline text="Sebastien Paquet" count="122" xmlUrl="http://radio.weblogs.com/0110772/rss.xml"/>		<outline text="MacRumors" count="121" xmlUrl="http://www.macrumors.com/macrumors.xml"/>		<outline text="kottke.org remainders" count="118" xmlUrl="http://www.kottke.org/remainder/index.rdf"/>		<outline text="BBC News | News Front Page | UK Edition" count="117" xmlUrl="http://www.bbc.co.uk/syndication/feeds/news/ukfs_news/front_page/rss091.xml"/>		<outline text="Y! - Top Stories" count="116" xmlUrl="http://rss.news.yahoo.com/rss/topstories"/>		<outline text="Cool Tools" count="115" xmlUrl="http://www.kk.org/cooltools/index.xml"/>		<outline text="Eric.Weblog()" count="115" xmlUrl="http://software.ericsink.com/rss.xml"/>		<outline text="Y! - Technology" count="115" xmlUrl="http://rss.news.yahoo.com/rss/tech"/>		<outline text="BarlowFriendz" count="114" xmlUrl="http://barlow.typepad.com/barlowfriendz/index.rdf"/>		<outline text="MacMinute.com: Up-to-the-minute Mac news -- around the clock, around the world." count="113" xmlUrl="http://www.macminute.com/headlines.xml"/>		<outline text="Don Park's Blog" count="112" xmlUrl="http://www.docuverse.com/blog/donpark/rss.xml"/>		<outline text="Many-to-Many" count="112" xmlUrl="http://www.corante.com/many/index.xml"/>		<outline text="WIL WHEATON DOT NET: Where is my mind?" count="109" xmlUrl="http://www.wilwheaton.net/mt/index.xml"/>		<outline text="World Wide Web Consortium" count="109" xmlUrl="http://www.w3.org/2000/08/w3c-synd/home.rss"/>		<outline text="Slashdot" count="109" xmlUrl="http://slashdot.org/slashdot.rdf"/>		<outline text="Windley's Enterprise Computing Weblog" count="108" xmlUrl="http://www.windley.com/rss.xml"/>		<outline text="SimpleBits" count="106" xmlUrl="http://www.simplebits.com/xml/rss.xml"/>		<outline text="Marc's Voice" count="105" xmlUrl="http://blogs.it/0100198/rss.xml"/>		<outline text="mozillaZine" count="104" xmlUrl="http://www.mozillazine.org/contents.rdf"/>		<outline text="Doc Searls Weblog" count="104" xmlUrl="http://doc.weblogs.com/xml/rss.xml"/>		<outline text="Scott Rosenberg's Links &amp;amp; Comment" count="103" xmlUrl="http://blogs.salon.com/0000014/rss.xml"/>		<outline text="TidBITS" count="101" xmlUrl="http://www.tidbits.com/channels/tidbits.rss"/>		<outline text="ResearchBuzz" count="101" xmlUrl="http://www.researchbuzz.com/researchbuzz.rss"/>		<outline text="MacInTouch" count="101" xmlUrl="http://www.macintouch.com/rss.xml"/>		<outline text="Anil Dash's daily links" count="101" xmlUrl="http://www.dashes.com/links/index.rdf"/>		<outline text="Sjoerd Visscher's weblog" count="101" xmlUrl="http://w3future.com/weblog/rss.xml"/>		<outline text="NewsGator News and Updates" count="100" xmlUrl="http://www.newsgator.com/news/rss.aspx"/>		<outline text="MacMerc.com" count="100" xmlUrl="http://www.macmerc.com/index.rss"/>		<outline text="Dare Obasanjo" count="100" xmlUrl="http://www.25hoursaday.com/weblog/SyndicationService.asmx/GetRss"/>		</body>	</opml>
