@@ -46,6 +46,7 @@ playlist.asx audio/x-ms-asx
 feed.rss application/rss+xml
 feed2 application/rss+xml x
 feed.atom application/atom+xml
+feeds.opml text/x-opml+xml
 subtitle.srt application/x-subrip
 
 # text
