@@ -1,3 +1,11 @@
+2007-10-24  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add OPML with the mime-type text/x-opml+xml,
+	and the more official text/x-opml as an alias. Up its magic priority,
+	and that of the Atom mime-type as well, to avoid them being detected
+	as plain XML files
+	* tests/: add an OPML feed to the suite
+
 2007-10-22  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Revert associating *.htm and *.html to 
